--- a/websvc.yaml
+++ b/websvc.yaml
@@ -4,10 +4,11 @@ metadata:
   #annotations:
   name: webd-service
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
     - port:  80
       targetPort: 8080
   selector:
     app: webd
+    tier: test
 
